// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List Snapshot Tests matches snapshot with default props 1`] = `
<div>
  <ul
    class="smolitux-list smolitux-list--md smolitux-list--align-start"
  >
    <li
      aria-disabled="false"
      aria-selected="false"
      class="smolitux-list-item"
    >
      <div
        class="smolitux-list-item-content"
      >
        <div
          class="smolitux-list-item-primary"
        >
          Item 1
        </div>
      </div>
    </li>
    <li
      aria-disabled="false"
      aria-selected="false"
      class="smolitux-list-item"
    >
      <div
        class="smolitux-list-item-content"
      >
        <div
          class="smolitux-list-item-primary"
        >
          Item 2
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`List Snapshot Tests matches snapshot with description variant 1`] = `
<div>
  <ul
    class="smolitux-list smolitux-list--description smolitux-list--md smolitux-list--align-start"
  >
    <div
      class="smolitux-list-item"
    >
      <dt
        class="smolitux-list-item-term"
      >
        Term 1
      </dt>
      <dd
        class="smolitux-list-item-description"
      >
        Description 1
      </dd>
    </div>
    <div
      class="smolitux-list-item"
    >
      <dt
        class="smolitux-list-item-term"
      >
        Term 2
      </dt>
      <dd
        class="smolitux-list-item-description"
      >
        Description 2
      </dd>
    </div>
  </ul>
</div>
`;

exports[`List Snapshot Tests matches snapshot with different densities 1`] = `
<div>
  <ul
    class="smolitux-list smolitux-list--md smolitux-list--compact smolitux-list--align-start"
  >
    <li
      aria-disabled="false"
      aria-selected="false"
      class="smolitux-list-item"
    >
      <div
        class="smolitux-list-item-content"
      >
        <div
          class="smolitux-list-item-primary"
        >
          Compact Item
        </div>
      </div>
    </li>
  </ul>
  <ul
    class="smolitux-list smolitux-list--md smolitux-list--align-start"
  >
    <li
      aria-disabled="false"
      aria-selected="false"
      class="smolitux-list-item"
    >
      <div
        class="smolitux-list-item-content"
      >
        <div
          class="smolitux-list-item-primary"
        >
          Default Item
        </div>
      </div>
    </li>
  </ul>
  <ul
    class="smolitux-list smolitux-list--md smolitux-list--comfortable smolitux-list--align-start"
  >
    <li
      aria-disabled="false"
      aria-selected="false"
      class="smolitux-list-item"
    >
      <div
        class="smolitux-list-item-content"
      >
        <div
          class="smolitux-list-item-primary"
        >
          Comfortable Item
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`List Snapshot Tests matches snapshot with different sizes 1`] = `
<div>
  <ul
    class="smolitux-list smolitux-list--sm smolitux-list--align-start"
  >
    <li
      aria-disabled="false"
      aria-selected="false"
      class="smolitux-list-item"
    >
      <div
        class="smolitux-list-item-content"
      >
        <div
          class="smolitux-list-item-primary"
        >
          Small Item
        </div>
      </div>
    </li>
  </ul>
  <ul
    class="smolitux-list smolitux-list--md smolitux-list--align-start"
  >
    <li
      aria-disabled="false"
      aria-selected="false"
      class="smolitux-list-item"
    >
      <div
        class="smolitux-list-item-content"
      >
        <div
          class="smolitux-list-item-primary"
        >
          Medium Item
        </div>
      </div>
    </li>
  </ul>
  <ul
    class="smolitux-list smolitux-list--lg smolitux-list--align-start"
  >
    <li
      aria-disabled="false"
      aria-selected="false"
      class="smolitux-list-item"
    >
      <div
        class="smolitux-list-item-content"
      >
        <div
          class="smolitux-list-item-primary"
        >
          Large Item
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`List Snapshot Tests matches snapshot with dividers 1`] = `
<div>
  <ul
    class="smolitux-list smolitux-list--md smolitux-list--align-start smolitux-list--dividers"
  >
    <li
      aria-disabled="false"
      aria-selected="false"
      class="smolitux-list-item smolitux-list-item--divider"
    >
      <div
        class="smolitux-list-item-content"
      >
        <div
          class="smolitux-list-item-primary"
        >
          Item 1
        </div>
      </div>
    </li>
    <li
      aria-disabled="false"
      aria-selected="false"
      class="smolitux-list-item smolitux-list-item--divider"
    >
      <div
        class="smolitux-list-item-content"
      >
        <div
          class="smolitux-list-item-primary"
        >
          Item 2
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`List Snapshot Tests matches snapshot with horizontal layout 1`] = `
<div>
  <ul
    class="smolitux-list smolitux-list--md smolitux-list--align-start smolitux-list--horizontal"
  >
    <li
      aria-disabled="false"
      aria-selected="false"
      class="smolitux-list-item smolitux-list-item--horizontal"
    >
      <div
        class="smolitux-list-item-content"
      >
        <div
          class="smolitux-list-item-primary"
        >
          Item 1
        </div>
      </div>
    </li>
    <li
      aria-disabled="false"
      aria-selected="false"
      class="smolitux-list-item smolitux-list-item--horizontal"
    >
      <div
        class="smolitux-list-item-content"
      >
        <div
          class="smolitux-list-item-primary"
        >
          Item 2
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`List Snapshot Tests matches snapshot with icons and actions 1`] = `
<div>
  <ul
    class="smolitux-list smolitux-list--md smolitux-list--align-start"
  >
    <li
      aria-disabled="false"
      aria-selected="false"
      class="smolitux-list-item"
    >
      <div
        class="smolitux-list-item-icon"
      >
        <svg
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <circle
            cx="8"
            cy="8"
            r="8"
          />
        </svg>
      </div>
      <div
        class="smolitux-list-item-content"
      >
        <div
          class="smolitux-list-item-primary"
        >
          Item with Icon and Action
        </div>
      </div>
      <div
        class="smolitux-list-item-action"
      >
        <button>
          Action
        </button>
      </div>
    </li>
  </ul>
</div>
`;

exports[`List Snapshot Tests matches snapshot with ordered variant 1`] = `
<div>
  <ol
    class="smolitux-list smolitux-list--ordered smolitux-list--md smolitux-list--align-start"
  >
    <li
      aria-disabled="false"
      aria-selected="false"
      class="smolitux-list-item"
    >
      <div
        class="smolitux-list-item-content"
      >
        <div
          class="smolitux-list-item-primary"
        >
          Item 1
        </div>
      </div>
    </li>
    <li
      aria-disabled="false"
      aria-selected="false"
      class="smolitux-list-item"
    >
      <div
        class="smolitux-list-item-content"
      >
        <div
          class="smolitux-list-item-primary"
        >
          Item 2
        </div>
      </div>
    </li>
  </ol>
</div>
`;

exports[`List Snapshot Tests matches snapshot with selectable items 1`] = `
<div>
  <ul
    class="smolitux-list smolitux-list--md smolitux-list--align-start smolitux-list--selectable"
  >
    <li
      aria-disabled="false"
      aria-selected="false"
      class="smolitux-list-item smolitux-list-item--clickable"
    >
      <div
        class="smolitux-list-item-content"
      >
        <div
          class="smolitux-list-item-primary"
        >
          Item 1
        </div>
      </div>
    </li>
    <li
      aria-disabled="false"
      aria-selected="true"
      class="smolitux-list-item smolitux-list-item--selected smolitux-list-item--clickable"
    >
      <div
        class="smolitux-list-item-content"
      >
        <div
          class="smolitux-list-item-primary"
        >
          Item 2
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`List Snapshot Tests matches snapshot with unordered variant 1`] = `
<div>
  <ul
    class="smolitux-list smolitux-list--unordered smolitux-list--md smolitux-list--align-start"
  >
    <li
      aria-disabled="false"
      aria-selected="false"
      class="smolitux-list-item"
    >
      <div
        class="smolitux-list-item-content"
      >
        <div
          class="smolitux-list-item-primary"
        >
          Item 1
        </div>
      </div>
    </li>
    <li
      aria-disabled="false"
      aria-selected="false"
      class="smolitux-list-item"
    >
      <div
        class="smolitux-list-item-content"
      >
        <div
          class="smolitux-list-item-primary"
        >
          Item 2
        </div>
      </div>
    </li>
  </ul>
</div>
`;
